--- a/views/login.html
+++ b/views/login.html
@@ -7,7 +7,7 @@
   <input name="author" type="text">
   <br><br>
   book:
-  <input name="book" type="text">
+  <input name="title" type="text">
   <br><br>
   <input type="submit">
 </form>
