getting all books works. Time to try to get request from user._html update

--- a/views/login.html
+++ b/views/login.html
@@ -3,11 +3,8 @@
 <body>
 <h2>Find a book</h2>
 <form action="/auth" method="POST">
-  Author:
-  <input name="author" type="text">
-  <br><br>
-  book:
-  <input name="title" type="text">
+  ID:
+  <input name="id" type="number">
   <br><br>
   <input type="submit">
 </form>
