--- a/views/login.html
+++ b/views/login.html
@@ -1,12 +1,23 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h2>Find a book</h2>
-<form action="/auth" method="POST">
-  ID:
-  <input name="id" type="number">
-  <br><br>
-  <input type="submit">
+<form action="/auth" method="post">
+  <!-- <div class="imgcontainer">
+    <img src="img_avatar2.png" alt="Avatar" class="avatar">
+  </div> -->
+
+  <div class="container">
+    <label for="user_name_html"><b>Username</b></label>
+    <input type="text" placeholder="Enter Username" name="user_name_html" required>
+
+    <label for="user_password_html"><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" name="user_password_html" required>
+
+    <button type="submit">Login</button>
+    <!-- <label>
+      <input type="checkbox" checked="checked" name="remember"> Remember me
+    </label> -->
+  </div>
+
+  <!-- <div class="container" style="background-color:#f1f1f1">
+    <button type="button" class="cancelbtn">Cancel</button>
+    <span class="psw">Forgot <a href="#">password?</a></span>
+  </div> -->
 </form>
-</body>
-</html>
