testing register page

--- a/views/login.html
+++ b/views/login.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html>
+<body>
+<h2>login</h2>
 <form action="/auth" method="post">
   <div class="container">
     <label for="user_name_html"><b>Username</b></label>
@@ -6,7 +10,9 @@
     <input type="password" placeholder="Enter Password" name="user_password_html" required>
     <button type="submit">Login</button>
   </div>
-  <form class="" action="/register" method="POST">
-    <button class="btn btn-lg btn-primary" type="submit">Register</button>
-  </form>
 </form>
+<form class="" action="/register" method="POST">
+  <button class="btn btn-lg btn-primary" type="submit">Register</button>
+</form>
+</body>
+</html>
