--- a/views/login.html
+++ b/views/login.html
@@ -11,7 +11,7 @@
     <button type="submit">Login</button>
   </div>
 </form>
-<form class="" action="/register" method="POST">
+<form class="" action="/register" method="get">
   <button class="btn btn-lg btn-primary" type="submit">Register</button>
 </form>
 </body>
