added a log out button to navgation bar

--- a/views/about.html
+++ b/views/about.html
@@ -43,6 +43,13 @@ body {
   <a href="user_settings.html">User Settings</a>
 </div>
 
+<div class="navigation">
+	<a class="button" href="">
+  	<img src="login.html">
+  <div class="logout">LOGOUT</div>
+	</a>
+</div>
+
 <div style="padding-left:16px">
   <h2>About Page</h2>
   <p>Some content..</p>
