--- a/views/home.html
+++ b/views/home.html
@@ -43,6 +43,14 @@ body {
   <a href="user_settings.html">User Settings</a>
 </div>
 
+
+<div class="navigation">
+	<a class="button" href="">
+  	<img src="login.html">
+  <div class="logout">LOGOUT</div>
+	</a>
+</div>
+
 <div style="padding-left:16px">
   <h2>Top Navigation Example</h2>
   <p>Some content..</p>
