fixing log out button

--- a/views/home.html
+++ b/views/home.html
@@ -41,15 +41,13 @@ body {
   <a href="about.html">About</a>
   <a href="manage_libary.html">Manage Libary</a>
   <a href="user_settings.html">User Settings</a>
-</div>
-
-
-<div class="navigation">
-	<a class="button" href="">
-  	<img src="login.html">
+  <a class="button" href="login.html">
   <div class="logout">LOGOUT</div>
-	</a>
+  </a>
 </div>
+
+
+
 
 <div style="padding-left:16px">
   <h2>Top Navigation Example</h2>
