--- a/views/user_settings.html
+++ b/views/user_settings.html
@@ -41,14 +41,12 @@ body {
   <a href="about.html">About</a>
   <a href="manage_libary.html">Manage Libary</a>
   <a href="user_settings.html">User Settings</a>
+  <a class="button" href="login.html">
+  <div class="logout">LOGOUT</div>
+  </a>
 </div>
 
-<div class="navigation">
-	<a class="button" href="">
-  	<img src="login.html">
-  <div class="logout">LOGOUT</div>
-	</a>
-</div>
+
 
 <div style="padding-left:16px">
   <h2>User Settings</h2>
