--- a/views/about.html
+++ b/views/about.html
@@ -31,6 +31,13 @@ body {
   background-color: #4CAF50;
   color: white;
 }
+
+.logoutLblPos{
+
+   position:fixed;
+   right:10px;
+   top:5px;
+}
 </style>
 </head>
 <body>
@@ -41,7 +48,7 @@ body {
   <a href="about.html">About</a>
   <a href="manage_libary.html">Manage Libary</a>
   <a href="user_settings.html">User Settings</a>
-  <a class="button" href="login.html">
+  <a align="right" class="button" href="login.html">
   <div class="logout">LOGOUT</div>
   </a>
 </div>
