--- a/views/manage_libary.html
+++ b/views/manage_libary.html
@@ -41,7 +41,7 @@ body {
   <a href="about.html">About</a>
   <a href="manage_libary.html">Manage Libary</a>
   <a href="user_settings.html">User Settings</a>
-  <a class="button" href="login.html">
+  <a align="right" class="button" href="login.html">
   <div class="logout">LOGOUT</div>
   </a>
 </div>
